Se culmino todos las objetivos planteados, se procedera a realizarse pruebas y el frontend
